# SerialReceiver

./: README.md  UMLdiagram.uxf
CSerialGUI/: SerialGUI.pro  console.cpp  console.h  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
SerialGUI/: SerialGUI.pro  console.cpp  console.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  terminal.pro
SerialGUI/forms/: mainwindow.ui  plot.ui
SerialGUI/include/: mainwindow.h  plot.h
SerialGUI/src/: console.cpp  mainwindow.cpp  plot.cpp
SerialReceiver/: CMakeLists.txt
app/: CMakeLists.txt  app.pro  main.cpp
app/headers/: elements.h  plot.h  rs232.h  serial.h
app/include/: buffer.h  elements.h  handlefile.h  interface.cpp  interface.h  plot.h  rs232.h  serial.h
app/source/: rs232.c  serial.cpp
app/src/: buffer.cpp  handlefile.cpp  interface.cpp  rs232.c  serial.cpp
build-SerialGUI-Desktop_Qt_5_5_1_GCC_64bit-Debug/: SerialGUI
build-app-Desktop_Qt_5_5_1_GCC_64bit-Debug/: Makefile  app  data.txt
build-app-Desktop_Qt_5_5_1_GCC_64bit-Domyślna/: CMakeCache.txt  Makefile  app  app.cbp  cmake_install.cmake  main
build-app-Desktop_Qt_5_5_1_GCC_64bit-Release/: app
build-serialreceiver-Desktop_Qt_5_6_0_GCC_64bit-Release/: serialreceiver
build-serialreceiver-Release/: serialreceiver
build-terminal-Desktop_Qt_5_6_0_GCC_64bit-Debug/: terminal
build-terminal-Desktop_Qt_5_6_0_GCC_64bit-Release/: terminal
serialreceiver/: serialreceiver.pro
terminal/: terminal.pro  terminal_plugin_import.cpp
(+13 files in other folders)
