project(app)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
FILE(GLOB_RECURSE INC_ALL "src/*.c" "src/*.cpp" "include/*.h")
include_directories("include")
include_directories("src")
add_executable(main "main.cpp" ${INC_ALL})
add_definitions(-std=c++11)
